--- a/PSCompletions/config.json
+++ b/PSCompletions/config.json
@@ -631,7 +631,7 @@
             "type": "boolean"
         },
         "alias":{
-            "description": "补全的默认触发别名\nThe default trigger alias for completion.",
+            "description": "补全的默认触发别名，如果没有设置，则使用目录名\nThe default trigger alias for completion. If not set, the directory name will be used.",
             "type":"string",
             "minLength":1
         },
