--- a/PSCompletions/en-US/config.json
+++ b/PSCompletions/en-US/config.json
@@ -630,12 +630,27 @@
             "description": "Whether to use hooks.",
             "type": "boolean"
         },
-        "alias":{
+        "alias": {
             "description": "The default trigger alias for completion. If not set, the directory name will be used.",
-            "type":"string",
-            "minLength":1
+            "examples": [
+                "",
+                []
+            ],
+            "oneOf": [
+                {
+                    "type": "string",
+                    "minLength": 1
+                },
+                {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "minItems": 1
+                }
+            ]
         },
-        "$schema":{
+        "$schema": {
             "description": "Define Schema."
         }
     },
