--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -16,6 +16,15 @@ jobs:
       with:
         fetch-depth: 1
 
-    - name: Check update
+    - name: Check update and update README
       run: |
         .\script\check-update.ps1
+
+    - name: Commit and push changes
+      run: |
+        git config --local user.email "abgohxf@outlook.com"
+        git config --local user.name "${{ github.actor }}"
+        git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+        git add .
+        git commit -m "[bot] update README"
+        git push
