--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,7 +3,7 @@ name: Check
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 1 * * 1" # 每周星期一1点
+    - cron: "*/60 * * * *"
 
 permissions:
   contents: write
