--- a/PSCompletions/zh-CN/config.json
+++ b/PSCompletions/zh-CN/config.json
@@ -1,7 +1,9 @@
 {
   "$schema": "http://json-schema.org/draft-07/schema",
   "type": "object",
-  "required": ["language"],
+  "required": [
+    "language"
+  ],
   "definitions": {
     "string": {
       "type": "string",
@@ -24,7 +26,13 @@
     "language": {
       "$ref": "#/definitions/array",
       "description": "设置可用的语言\n如果有效值不包括你想要指定的语言, 请提交一个 issue",
-      "examples": [[], ["en-US", "zh-CN"]],
+      "examples": [
+        [],
+        [
+          "en-US",
+          "zh-CN"
+        ]
+      ],
       "items": {
         "type": "string",
         "enum": [
