--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,7 +3,8 @@ name: Check
 on:
   workflow_dispatch:
   schedule:
-    - cron: "*/60 * * * *"
+    # At minute 20 past every 4th hour.
+    - cron: "20 */4 * * *"
 
 permissions:
   contents: write
@@ -12,7 +13,7 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 1
 
@@ -22,9 +23,16 @@ jobs:
 
       - name: Commit and push changes
         run: |
-          git config --local user.email "abgohxf@outlook.com"
-          git config --local user.name "${{ github.actor }}"
-          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "[bot] update README"
+          git commit -m "Automatically update README"
           git push
+  keepalive-job:
+    name: Keepalive Workflow
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: actions/checkout@v4
+      - uses: gautamkrishnar/keepalive-workflow@v2
