--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -28,11 +28,10 @@ jobs:
           git add .
           git commit -m "Automatically update README"
           git push
-  keepalive-job:
-    name: Keepalive Workflow
+  workflow-keepalive:
+    if: github.event_name == 'schedule'
     runs-on: ubuntu-latest
     permissions:
       actions: write
     steps:
-      - uses: actions/checkout@v4
-      - uses: gautamkrishnar/keepalive-workflow@v2
+      - uses: liskin/gh-workflow-keepalive@v1.2.1
