--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -34,4 +34,4 @@ jobs:
     permissions:
       actions: write
     steps:
-      - uses: liskin/gh-workflow-keepalive@v1.2.1
+      - uses: abgox/gh-workflow-keepalive@main
