--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Configure Git
         shell: pwsh
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
       - name: Update
         shell: pwsh
