--- a/schemas/scoop-manifest.zh-CN.json
+++ b/schemas/scoop-manifest.zh-CN.json
@@ -4,10 +4,6 @@
   "type": "object",
   "required": ["version", "description", "homepage", "license"],
   "$comment": "markdownDescription 字段是 vscode 扩展属性，用于在 vscode 中显示 markdown 格式的描述",
-  "dependentRequired": {
-    "autoupdate": ["checkver"],
-    "checkver": ["autoupdate"]
-  },
   "definitions": {
     "bool": {
       "type": "boolean",
@@ -1041,6 +1037,96 @@
   },
   "allOf": [
     {
+      "$comment": "如果定义了 checkver，就必须定义 autoupdate",
+      "allOf": [
+        {
+          "if": {
+            "required": ["checkver"]
+          },
+          "then": {
+            "if": {
+              "required": ["autoupdate"]
+            },
+            "else": {
+              "properties": {
+                "checkver": {
+                  "not": true,
+                  "errorMessage": "如果定义了 checkver，就必须定义 autoupdate"
+                }
+              }
+            }
+          }
+        },
+        {
+          "if": {
+            "required": ["autoupdate"]
+          },
+          "then": {
+            "if": {
+              "required": ["checkver"]
+            },
+            "else": {
+              "properties": {
+                "autoupdate": {
+                  "not": true,
+                  "errorMessage": "如果定义了 autoupdate，就必须定义 checkver"
+                }
+              }
+            }
+          }
+        }
+      ]
+    },
+    {
+      "$comment": "如果 url 是 github releases 链接，则需要指定 hash 模式为 github",
+      "properties": {
+        "autoupdate": {
+          "type": "object",
+          "if": {
+            "properties": {
+              "architecture": {
+                "type": "object",
+                "patternProperties": {
+                  "^(64bit|arm64|32bit)$": {
+                    "properties": {
+                      "url": {
+                        "oneOf": [
+                          {
+                            "type": "string",
+                            "pattern": "^https://github\\.com/.+?/releases/download/"
+                          },
+                          {
+                            "type": "array",
+                            "items": {
+                              "type": "string",
+                              "pattern": "^https://github\\.com/.+?/releases/download/"
+                            }
+                          }
+                        ]
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "then": {
+            "required": ["hash"],
+            "properties": {
+              "hash": {
+                "required": ["mode"],
+                "properties": {
+                  "mode": {
+                    "const": "github"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    {
       "$comment": "如果存在 license，但不存在 url 或 architecture 就触发警告",
       "if": {
         "required": ["license"],
@@ -1554,55 +1640,6 @@
           }
         }
       ]
-    },
-    {
-      "$comment": "如果 url 是 github releases 链接，则需要指定 hash 模式为 github",
-      "properties": {
-        "autoupdate": {
-          "type": "object",
-          "if": {
-            "properties": {
-              "architecture": {
-                "type": "object",
-                "patternProperties": {
-                  "^(64bit|arm64|32bit)$": {
-                    "properties": {
-                      "url": {
-                        "oneOf": [
-                          {
-                            "type": "string",
-                            "pattern": "^https://github\\.com/.+?/releases/download/"
-                          },
-                          {
-                            "type": "array",
-                            "items": {
-                              "type": "string",
-                              "pattern": "^https://github\\.com/.+?/releases/download/"
-                            }
-                          }
-                        ]
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "then": {
-            "required": ["hash"],
-            "properties": {
-              "hash": {
-                "required": ["mode"],
-                "properties": {
-                  "mode": {
-                    "const": "github"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
     }
   ]
 }
